--- a/AndroidFinalProject/app/build.gradle
+++ b/AndroidFinalProject/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -33,7 +34,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-database:19.6.0' //19.2.1
     testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.12' //added this line
+    testImplementation 'androidx.test:core:1.0.0' //added this line
+    testImplementation 'org.mockito:mockito-core:1.10.19' //added this line
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
