--- a/AndroidFinalProject/app/build.gradle
+++ b/AndroidFinalProject/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true // added value
     }
 
     buildTypes {
@@ -34,7 +35,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.firebase:firebase-database:19.6.0' //19.2.1
+    implementation 'com.google.firebase:firebase-database:19.6.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'//19.2.1
     testImplementation 'junit:junit:4.+'
     testImplementation 'junit:junit:4.12' //added this line
     testImplementation 'androidx.test:core:1.0.0' //added this line
