--- a/AndroidFinalProject/app/src/main/AndroidManifest.xml
+++ b/AndroidFinalProject/app/src/main/AndroidManifest.xml
@@ -9,6 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidFinalProject">
+        <activity
+            android:name=".ShowProductActivity"
+            android:parentActivityName=".MainActivity">
+        </activity>
+        <activity
+            android:name=".AddActivity"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".SearchActivity"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
