login system implementation

--- a/AndroidFinalProject/app/src/main/AndroidManifest.xml
+++ b/AndroidFinalProject/app/src/main/AndroidManifest.xml
@@ -10,16 +10,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidFinalProject">
         <activity
+            android:name=".RegisterActivity"
+            android:parentActivityName=".WelcomeActivity"
+            ></activity>
+        <activity android:name=".MainActivity" />
+        <activity
             android:name=".ShowProductActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".AddActivity"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SearchActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
