working on the cart

--- a/AndroidFinalProject/app/build.gradle
+++ b/AndroidFinalProject/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     implementation 'com.google.firebase:firebase-auth:20.0.3'//19.2.1
+    implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     testImplementation 'junit:junit:4.+'
     testImplementation 'junit:junit:4.12' //added this line
     testImplementation 'androidx.test:core:1.0.0' //added this line
