--- a/AndroidFinalProject/app/src/main/AndroidManifest.xml
+++ b/AndroidFinalProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidFinalProject">
-        <activity android:name=".CartActivity"></activity>
+        <activity android:name=".SaveCartActivity"></activity>
+        <activity android:name=".CartActivity" />
         <activity
             android:name=".RegisterActivity"
             android:parentActivityName=".WelcomeActivity" />
