--- a/AndroidFinalProject/app/src/main/AndroidManifest.xml
+++ b/AndroidFinalProject/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidFinalProject">
-        <activity android:name=".SaveCartActivity"></activity>
-        <activity android:name=".CartActivity" />
+        <activity android:name=".RetrieveCartActivity"></activity>
         <activity
             android:name=".RegisterActivity"
             android:parentActivityName=".WelcomeActivity" />
