--- a/AndroidFinalProject/app/build.gradle
+++ b/AndroidFinalProject/app/build.gradle
@@ -40,8 +40,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.3'//19.2.1
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     testImplementation 'junit:junit:4.+'
-    testImplementation 'junit:junit:4.12' //added this line
-    testImplementation 'androidx.test:core:1.0.0' //added this line
+    testImplementation 'junit:junit:4.12' //added this line    testImplementation 'androidx.test:core:1.0.0' //added this line
     testImplementation 'org.mockito:mockito-core:1.10.19' //added this line
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
