--- a/AndroidFinalProject/app/src/main/AndroidManifest.xml
+++ b/AndroidFinalProject/app/src/main/AndroidManifest.xml
@@ -9,19 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidFinalProject">
-        <activity android:name=".RetrieveCartActivity"></activity>
-        <activity
-            android:name=".RegisterActivity"
+        <activity android:name=".RetrieveCartActivity"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".RegisterActivity"
             android:parentActivityName=".WelcomeActivity" />
         <activity android:name=".MainActivity" />
-        <activity
-            android:name=".ShowProductActivity"
+        <activity android:name=".ShowProductActivity"
             android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".AddActivity"
+        <activity android:name=".AddActivity"
             android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".SearchActivity"
+        <activity android:name=".SearchActivity"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".WelcomeActivity">
             <intent-filter>
